# pressure

./: Cargo.toml  README.md
dev_inst/: pressure.toml
dev_inst/theme/templates/: archive.html  head.html  index.html  meta.html  page.html
src/: config.rs  core.rs  error.rs  handlers.rs  lib.rs  main.rs  ser.rs  web.rs
templates/: index.html
tests/test_inst/: config.toml
tests/test_inst/pages/: test.md
tests/test_inst/posts/: 2020-08-31-test.md
