[package]
name = "pressure"
version = "0.1.0"
authors = ["Richard Chien <richardchienthebest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tera = "1"
lazy_static = "1"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
yaml-rust = { git = "https://github.com/richardchien/yaml-rust" }
