[package]
name = "pressure"
version = "0.1.0"
authors = ["Richard Chien <richardchienthebest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5"
actix-service = "1"
tera = { git = "https://github.com/verilab/tera" }
lazy_static = "1"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
yaml-rust = { git = "https://github.com/verilab/yaml-rust" }
regex = "1"
comrak = "0.9"
maplit = "1"
chrono = "0.4"

[patch.crates-io]
actix-web-codegen = { git = "https://github.com/verilab/actix-web" }
